# Compresor-De-Archivos-Huffman

./: CMakeLists.txt  README.md
huffman/: INSTRUCCIONES_GUI.md  Makefile  README.md  bitstream.cpp  bitstream.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frequency_table.cpp  frequency_table.h  gui.h  huffman_tree.cpp  huffman_tree.h  main.cpp  prueba.huff  test.txt
huffman/Funciones/: bitstream.cpp  decoder.cpp  encoder.cpp  frequency_table.cpp  gui.cpp  huffman_tree.cpp  main_gui.cpp
